deployment-mariadb.yaml
## Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: mariadb
  annotations:
    polaris.fairwinds.com/runAsRootAllowed-exempt: true  
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      tier: db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        tier: db
    spec:
      containers:
      - name: mariadb
        image: mariadb:lts
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: dbdata
          mountPath: "/var/lib/mysql"
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livelinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec mysql -h
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec mysql -h
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
