deployment-wordpress.yaml
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: wordpress
#  annotations: {}
#    #metallb.universe.tf/loadBalancerIPs: 0.0.0.0
#    #external-dns.alpha.kubernetes.io/hostname: bodega.farhoodliquor.com.
#  labels:
#   app: wordpress
#spec:
#  ports:
#    - port: 80
#  selector:
#    app: wordpress
#    tier: web
#  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      tier: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: web
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: wwwdata
          mountPath: /var/www/html
      volumes:
      - name: wwwdata
        persistentVolumeClaim:
          claimName: wwwdata
