service-mariadb.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: mariadb
   labels:
     app: wordpress
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: mariadb
  selector:
    app: wordpress
    tier: db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: db
  template:
    metadata:
      labels:
        app: wordpress
        tier: db
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: dbdata
          mountPath: "/var/lib/mysql"
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
