service-traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  annotations:
    metallb.universe.tf/loadBalancerIPs: 65.43.40.101
spec:
  loadBalancerIP: 65.43.40.101
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
  ports:
    - port: 80
      name: web-int
      targetPort: web-int
    
    - port: 443
      name: web-int-tls
      targetPort: web-int-tls
