service-wordpress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
   app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: web
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: web
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: wwwdata
          mountPath: /var/www/html
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - wordpress
            topologyKey: "kubernetes.io/hostname"    
      volumes:
      - name: wwwdata
        nfs:
          path: /mnt/pool0/sites/farhood.org/chris
          server: spielberg.farhoodliquor.dmz
