wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
   app.kubernetes.io/name: wordpress
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: wordpress
    tier: web
  clusterIP: None
