ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chris.farhood.org
spec:
  rules:
  - host: chris.farhood.org
    http:
      paths:
      - backend:
          service:
            name:  wordpress
            port:
              number: 80
  tls:
  - hosts:
    - chris.farhood.org
    secretName: farhood-org-cert-letsencrypt-prod
